src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Reason_for_Win_Loss__c</fullName>
        <label>Reason for Win / Loss</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Better solved customer&apos;s business issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Loyality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Rejected by Zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor better solved Business Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not meet the CRSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Sell AIT Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Sell EVM Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer ceased trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer choice to stay with status quo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Expectations not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed to identify Decision Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed to win over Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Base not Compatible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Support Resources Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Partner Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Price offered by the Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met all Decision Makers Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative history with Zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship with the Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship with the Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship with the Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra engaged later than Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra has the Install Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Solution wasn&apos;t Ready</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Financial_Status__c</fullName>
        <formula>IF(Opportunity_Reseller__c != null, IF(Opportunity_Reseller__r.Financial_Customer_Flag__c, &apos;true&apos;, &apos;false&apos;),null)</formula>
        <label>Reseller Financial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Price__c</fullName>
        <label>Reseller Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <label>Reseller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYM_Transaction_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <inlineHelpText>System Generated Unique Tracking Number for the Opportunity</inlineHelpText>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Method__c</fullName>
        <label>Sales Method</label>
        <picklist>
            <picklistValues>
                <fullName>Zebra Pipeline</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Stage_Amount__c</fullName>
        <description>This field is created for reporting Purpose</description>
        <formula>Amount *  (Sales_Stage_Order__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Stage_Order_LA__c</fullName>
        <formula>CASE( StageName ,&apos;Identify&apos;,5,&apos;Qualify&apos;, 5,&apos;Validate&apos;,30,&apos;Secure&apos;,70,&apos;Closed - Won&apos;,100,&apos;Closed - Lost&apos;,0,&apos;Closed - Duplicate&apos;,0,&apos;Forecast&apos;, 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage Order LA EVM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Stage_Order__c</fullName>
        <description>This formula field gets the number based on the Sales Stage Value</description>
        <formula>CASE(StageName,&apos;Identify&apos;,10,&apos;Qualify&apos;, 30,&apos;Validate&apos;,50,&apos;Secure&apos;,80,&apos;Closed - Won&apos;,100,&apos;Closed - Lost&apos;,0,&apos;Closed - Duplicate&apos;,0,&apos;Forecast&apos;, 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Offered__c</fullName>
        <description>This field is to determine if service is offered or not</description>
        <label>Service Offered?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Product_Pullthrough__c</fullName>
        <description>Sum of Total price SKU service products</description>
        <inlineHelpText>Value of Sevice bookings from Opportunity</inlineHelpText>
        <label>Service Product Pullthrough</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_Service_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_Service_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Siebel_Opp_Id__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Opp Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <description>In order to get a deficit between the actual numbers and the target , this field has been created per requirement and will be displayed only on &quot;Sales Forecast&quot; pagelayout</description>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Timeframe_Description__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Timeframe Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZAP__c</fullName>
        <description>ZAP # needs to be entered when the CAG box is checked.</description>
        <inlineHelpText>required when CAG box is checked</inlineHelpText>
        <label>ZAP #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>briefingedge__Visit_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Data</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>AutoConvert_Opportunity</fullName>
        <active>true</active>
        <description>Record Type for Opportunities AutoConverted from Leads</description>
        <label>AutoConvert Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Run_Rate</fullName>
        <active>true</active>
        <description>This is used for Run Rate Opportunities</description>
        <label>Run Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Forecast</fullName>
        <active>true</active>
        <description>Record Type for Forecast Opptys</description>
        <label>Sales Forecast</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zebra_Opportunity</fullName>
        <active>true</active>
        <description>Record Type for Opportunities Created by Zebra Sellers</description>
        <label>Zebra Opportunity</label>
    </recordTypes>
    <validationRules>
        <fullName>Closed_Opportunity_Should_Not_be_edited</fullName>
        <active>true</active>
        <description>Closed_Opportunity_Should_Not_be_edited</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;) &amp;&amp; ($User.Alias &lt;&gt; &apos;nshar&apos;) &amp;&amp;(RecordType.DeveloperName = &apos;Closed_Opportunity&apos; &amp;&amp; ( ISCHANGED(Name) ||  ISCHANGED( StageName) ||  ISCHANGED( CloseDate )) &amp;&amp;  ($Profile.Name &lt;&gt; &apos;System Administrator&apos;))&amp;&amp; NOT(   $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c )</errorConditionFormula>
        <errorMessage>Closed Opportunity cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_depending_on_Oppty_Stage</fullName>
        <active>true</active>
        <description>This rule ensures that Competitor field is populated when Opportunity Stage is either one of &apos;Validate&apos;, &apos;Secure&apos;, &apos;Closed won&apos;, ‘Closed Lost’ or ‘Closed Duplicate’.</description>
        <errorConditionFormula>IF(
 ($User.Alias == &apos;zzebi&apos; || $User.Alias == &apos;nshar&apos;), false,
 ( ISPICKVAL( StageName , &apos;Validate&apos;) || ISPICKVAL( StageName , &apos;Secure&apos;) || ISPICKVAL( StageName , &apos;Closed - Won&apos;) || ISPICKVAL(StageName , &apos;Closed - Lost&apos;) || ISPICKVAL(StageName , &apos;Closed - Duplicate&apos;) ) &amp;&amp; ISBLANK( Competitor__c) &amp;&amp;  RecordType.DeveloperName !=&apos;AutoConvert_Opportunity&apos;)&amp;&amp; NOT(  $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c ) &amp;&amp; (RecordType.DeveloperName != &apos;Run_Rate&apos;)</errorConditionFormula>
        <errorDisplayField>Competitor__c</errorDisplayField>
        <errorMessage>Please choose a Competitor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DR_Error</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(DR_IR_Interface_Status__c, &apos;Error&apos;) &amp;&amp; NOT(ISNEW()) &amp;&amp; $User.Alias &lt;&gt; &apos;zzebi&apos;</errorConditionFormula>
        <errorMessage>The Opportunity is not yet created by the Interface, please wait for some more time or contact the system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Active_AIT_Accounts</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Account.Account_Status__c,&apos;Inactive&apos;),ISPICKVAL(Account.Account_Conversion_Source__c,&apos;AIT&apos;),NOT( $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c),$User.Alias &lt;&gt; &apos;zzebi&apos;,$User.Alias &lt;&gt; &apos;nshar&apos;)</errorConditionFormula>
        <errorMessage>The account is not active and cannot be added to the Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_line_items_is_not_added</fullName>
        <active>true</active>
        <description>Opportunity line items should be there when the sale stage becomes &apos;Validate&apos; and for any upward stage after validate.</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;) &amp;&amp; (( RecordType.DeveloperName = &apos;Zebra_Opportunity&apos; )&amp;&amp; ( ISPICKVAL( StageName , &apos;Validate&apos;) || ISPICKVAL( StageName , &apos;Secure&apos;) || ISPICKVAL( StageName , &apos;Closed - Won&apos;)) &amp;&amp;  (Line_items__c = 0))&amp;&amp; NOT(  $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c )&amp;&amp; NOT(ISPICKVAL(Opportunity_Conversion_Source__c,&apos;EVM&apos;))</errorConditionFormula>
        <errorMessage>SKU Level Opportunity Line Items should be present when the Stage is Validate, Secure or Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_line_items_to_be_at_the_SKU</fullName>
        <active>true</active>
        <description>Opportunity line items to be at the SKU level when the sale stage becomes &apos;Validate&apos; and for any upward stage after validate.</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;) &amp;&amp; (( RecordType.DeveloperName = &apos;Zebra_Opportunity&apos; )&amp;&amp; ( ISPICKVAL( StageName , &apos;Validate&apos;) || ISPICKVAL( StageName , &apos;Secure&apos;) || ISPICKVAL( StageName , &apos;Closed - Won&apos;)) &amp;&amp;  !(  Line_items__c = Has_all_SKU_Level_Entries__c) &amp;&amp; !(Line_items__c = 0))&amp;&amp; NOT(  $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c )&amp;&amp; NOT(ISPICKVAL( Opportunity_Conversion_Source__c, &apos;EVM&apos;))</errorConditionFormula>
        <errorMessage>All the Opportunity Line Items should be at SKU Level when the Sales Stage is Validate, Secure or Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Date_Earlier_than_First_Ship_Date</fullName>
        <active>true</active>
        <errorConditionFormula>( $User.Alias &lt;&gt; &apos;nshar&apos; ) &amp;&amp; ( $User.Alias &lt;&gt; &apos;zzebi&apos; ) &amp;&amp; (Order_Date__c &gt; CloseDate  )&amp;&amp; NOT( $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c )</errorConditionFormula>
        <errorDisplayField>Order_Date__c</errorDisplayField>
        <errorMessage>Order Date Must be earlier than First Ship Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Mandatory_For_Service_Not_Offered</fullName>
        <active>true</active>
        <description>If Service is not offered the reason should be given</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;nshar&apos;)&amp;&amp; ($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(ISPICKVAL(Service_Offered__c , &apos;No&apos;)  &amp;&amp;    ISPICKVAL(Reason_For_Service_Not_Offered__c, &apos;&apos;))&amp;&amp; NOT( $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c )</errorConditionFormula>
        <errorDisplayField>Reason_For_Service_Not_Offered__c</errorDisplayField>
        <errorMessage>Please choose a Reason for not offering Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_Win_Loss_depending_on_Stage</fullName>
        <active>true</active>
        <description>This value ensures that Reason for WIn/Loss is entered when the Opportunity Stage is one of the Closed.</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;nshar&apos;)&amp;&amp; ($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(( ISPICKVAL( StageName , &apos;Closed - Won&apos;)  ||  ISPICKVAL(StageName , &apos;Closed - Lost&apos;) ||  ISPICKVAL(StageName , &apos;Closed - Duplicate&apos;) )  &amp;&amp;  ISBLANK( Reason_for_Win_Loss__c ))&amp;&amp; NOT(  $Setup.RulesDeactivateSwitch__c.Opportunity_Switch__c ) &amp;&amp; (RecordType.DeveloperName  &lt;&gt; &apos;Run_Rate&apos;)</errorConditionFormula>
        <errorDisplayField>Reason_for_Win_Loss__c</errorDisplayField>
        <errorMessage>Please choose a Reason for Win / Loss.</errorMessage>
    </validationRules>
</CustomObject>